--- a/clinicaodontologica/pom.xml
+++ b/clinicaodontologica/pom.xml
@@ -90,6 +90,17 @@
 			<version>1.7.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
+		<!--Mongo-->
+		<!--<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>-->
+
 	</dependencies>
 
 	<build>
